--- a/Ostoslista/src/App.css
+++ b/Ostoslista/src/App.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background-color: #70a571;
+  background-color: #604caf;
   color: white;
   padding: 1rem;
   text-align: center;
@@ -17,7 +17,7 @@ div {
 }
 
 button {
-  background-color: #715062;
+  background-color: #6f4caf;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
@@ -25,7 +25,7 @@ button {
 }
 
 button:hover {
-  background-color: #69856a;
+  background-color: #4583a0;
 }
 
 ul {
@@ -37,15 +37,15 @@ li {
   padding: 0.5rem;
   margin: 0.5rem 0;
   color: white;
-  background-color: rgb(119, 119, 193);
+  background-color: rgb(255, 0, 195);
   cursor: pointer;
   text-align: center;
 }
 
 li:nth-child(odd) {
-  background-color: rgb(74, 54, 30);
+  background-color: rgb(255, 0, 162);
 }
 
 li:hover {
-  background-color: #7a6ea7; 
+  background-color: #d400ff; 
 }
