--- a/Ostoslista/src/App.css
+++ b/Ostoslista/src/App.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background-color: #604caf;
+  background-color: #4caf87;
   color: white;
   padding: 1rem;
   text-align: center;
@@ -17,7 +17,7 @@ div {
 }
 
 button {
-  background-color: #6f4caf;
+  background-color: #54af4c;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
@@ -25,7 +25,7 @@ button {
 }
 
 button:hover {
-  background-color: #4583a0;
+  background-color: #45a098;
 }
 
 ul {
@@ -37,15 +37,15 @@ li {
   padding: 0.5rem;
   margin: 0.5rem 0;
   color: white;
-  background-color: rgb(255, 0, 195);
+  background-color: rgb(204, 0, 255);
   cursor: pointer;
   text-align: center;
 }
 
 li:nth-child(odd) {
-  background-color: rgb(255, 0, 162);
+  background-color: rgb(221, 0, 255);
 }
 
 li:hover {
-  background-color: #d400ff; 
+  background-color: #3700ff; 
 }
